<resources>
    <string name="app_name">TestingExample</string>
    <string name="hello_world">Hello</string>
    <string name="test_service">测试服务器</string>
    <string name="recommand">推荐</string>
    <string name="product">产品</string>
    <string name="mine">我的</string>
    <string name="login_register">登录/注册</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
</resources>
